cmake_minimum_required(VERSION 3.26)
project(oop)

set(CMAKE_CXX_STANDARD 17)

add_executable(oop src/Main.cpp
        src/entities/player/Player.cpp
        src/entities/player/Player.h
        src/entities/player/PlayerManager.cpp
        src/entities/player/PlayerManager.h
        src/world/map/Cell.cpp
        src/world/map/Cell.h
        src/world/map/Playground.cpp
        src/world/map/Playground.h
        src/world/map/MapGenerator.cpp
        src/world/map/MapGenerator.h
        src/input_output/Renderer.cpp
        src/input_output/Renderer.h
        src/world/events/IEvent.h
        src/world/events/Trap.cpp
        src/world/events/Trap.h
        src/world/events/Chest.cpp
        src/world/events/Chest.h
        src/world/events/ExplodeWall.cpp
        src/world/events/ExplodeWall.h
        src/world/events/Teleport.cpp
        src/world/events/Teleport.h
        src/sup/circular_linked_list/CircularLinkedList.cpp
        src/sup/circular_linked_list/CircularLinkedList.h
        src/sup/circular_linked_list/Node.cpp
        src/sup/circular_linked_list/Node.h
        src/input_output/Config.cpp
        src/input_output/Config.h
        src/input_output/input_interface/IInput.h
        src/input_output/input_interface/FileInput.cpp
        src/input_output/input_interface/FileInput.h
        src/input_output/input_interface/ConsoleInput.cpp
        src/input_output/input_interface/ConsoleInput.h
        src/game/Game.cpp
        src/game/Game.h
        src/game/menu/Menu.h
        src/game/menu/MainMenu.cpp
        src/game/menu/MainMenu.h
        src/game/menu/PauseMenu.cpp
        src/game/menu/PauseMenu.h
        src/game/menu/Menu.cpp
        src/game/menu/SettingsMenu.cpp
        src/game/menu/SettingsMenu.h
        src/game/level/Level.cpp
        src/game/level/Level.h
        src/game/menu/MenuHandler.cpp
        src/game/menu/MenuHandler.h
        src/input_output/InputHandler.cpp
        src/input_output/InputHandler.h
        src/game/menu/DefeatMenu.cpp
        src/game/menu/DefeatMenu.h
        src/game/menu/VictoryMenu.cpp
        src/game/menu/VictoryMenu.h
        src/sup/observer/IObservable.h
        src/sup/observer/IObserver.h
        src/game/updater/Updater.cpp
        src/game/updater/Updater.h
        src/log/appenders/Appender.h
        src/log/messages/Message.h
        src/log/appenders/ConsoleAppender.cpp
        src/log/appenders/ConsoleAppender.h
        src/log/appenders/FileAppender.cpp
        src/log/appenders/FileAppender.h
        src/log/appenders/Appender.cpp
        src/log/messages/Message.cpp
        src/log/Logger.cpp
        src/log/Logger.h
        src/log/messages/VictoryMessage.cpp
        src/log/messages/VictoryMessage.h
        src/log/messages/DefeatMessage.cpp
        src/log/messages/DefeatMessage.h
        src/log/messages/NewLevelMessage.cpp
        src/log/messages/NewLevelMessage.h
        src/log/messages/NewGameMessage.cpp
        src/log/messages/NewGameMessage.h
        src/log/messages/KeyWithCommandMessage.h
        src/log/messages/KeyWithCommandMessage.cpp
        src/log/messages/KeyWithoutCommandMessage.cpp
        src/log/messages/KeyWithoutCommandMessage.h
        src/game/menu/LoggerMenu.cpp
        src/game/menu/LoggerMenu.h
)
